--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="logo.png" alt="TradeTribe Logo" class="logo" />
+    <img src="logo.PNG" alt="TradeTribe Logo" class="logo" />
     <h1>Welcome to TradeTribe</h1>
     <p class="subtitle">Join a powerful tribe of traders. Learn, grow, and profit — together.</p>
     <a href="#waitlist" class="cta-btn">Join the Waitlist</a>
