--- a/index.html
+++ b/index.html
@@ -2,24 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Join the Waitlist</title>
-  <link rel="stylesheet" href="style/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TradeTribe</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
-  <button class="btn-waitlist" onclick="openModal()">Join the Waitlist</button>
-
-  <div class="modal" id="waitlistModal">
-    <div class="modal-content">
-      <span class="close" onclick="closeModal()">&times;</span>
-      <h2>Join Our Waitlist</h2>
-      <input type="email" id="email" placeholder="Enter your email" />
-      <br>
-      <button onclick="submitWaitlist()">Submit</button>
-    </div>
+  <div class="container">
+    <img src="logo.png" alt="TradeTribe Logo" class="logo" />
+    <h1>Welcome to TradeTribe</h1>
+    <p class="subtitle">Join a powerful tribe of traders. Learn, grow, and profit — together.</p>
+    <a href="#waitlist" class="cta-btn">Join the Waitlist</a>
   </div>
-
-  <script src="js/main.js" defer></script>
 </body>
 </html>
